Update syntax and formatting for all code files